force-app/main/default/objects/ssot__CourseOfferingParticipation__dlm/fields/ssot__CourseOfferingParticipantId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CourseOfferingParticipantId__c</fullName>
    <label>Course Offering Participant</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CourseOfferingParticipantId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>