force-app/main/default/objects/ssot__CourseOfferingParticipation__dlm/fields/ssot__ParticipationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParticipationDate__c</fullName>
    <label>Participation Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParticipationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Date</type>
</CustomField>