force-app/main/default/objects/ssot__CourseOfferingParticipation__dlm/fields/ssot__rel_1719820269222_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719820269222_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CourseOfferingParticipation_CourseOf_rel</label>
    <referenceTo>ssot__CourseOfferingParticipant__dlm</referenceTo>
    <relationshipLabel>CourseOfferingParticipation_CourseOf_rel</relationshipLabel>
    <relationshipName>rel_1719820269222_end</relationshipName>
    <type>Lookup</type>
</CustomField>